--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pixi/react": "^7.1.1",
+    "next": "^14.0.0",
+    "pixi.js": "^7.3.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "eslint": "^8",
