--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@pixi/react": "^7.1.1",
+    "framer-motion": "^10.16.16",
     "next": "^14.0.0",
-    "pixi.js": "^7.3.2",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5"
