--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
     "sass": "^1.69.5"
   },
   "devDependencies": {
