--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.0.0"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.5",
+    "eslint-config-standard": "^17.1.0"
   }
 }
