Add changes for the admin area

--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.4",
     "framer-motion": "^10.16.16",
     "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.52.2",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
