Feat add and configured react-toastify

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "dash": "^4.5.1",
     "framer-motion": "^10.16.16",
     "next": "^14.0.0",
     "react": "^18",
@@ -18,6 +19,7 @@
     "react-hook-form": "^7.52.2",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
+    "react-toastify": "^10.0.6",
     "sass": "^1.69.5",
     "zustand": "^4.5.5"
   },
