--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
+    "bip39": "^3.1.0",
     "dash": "^4.5.1",
     "framer-motion": "^10.16.16",
     "next": "^14.0.0",
