Add loading on user acquisition And user cards

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@react-spring/web": "^9.7.4",
-    "bip39": "^3.1.0",
     "dash": "^4.5.1",
     "framer-motion": "^10.16.16",
     "next": "^14.0.0",
@@ -21,6 +20,7 @@
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.6",
+    "rooks": "^7.14.1",
     "sass": "^1.69.5",
     "zustand": "^4.5.5"
   },
