--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bip39": "^3.1.0",
     "dash": "^4.5.1",
     "framer-motion": "^10.16.16",
+    "localforage": "^1.10.0",
     "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
