--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean-install": "rm -rf node_modules && rm yarn.lock && yarn install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
