--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.4",
     "bip39": "^3.1.0",
-    "dash": "^4.7.0",
+    "dash": "4.7.0",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
     "next": "^14.0.0",
@@ -35,5 +35,6 @@
   "engines": {
     "node": ">=20.8.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
