--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "clean-install": "rm -rf node_modules && rm yarn.lock && yarn install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -32,9 +31,9 @@
   "license": "MIT",
   "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-n": "^17.14.0"
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.14.0"
   }
 }
