--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 NEXT_PUBLIC_PASSWORD_ADMIN=adminadmin
 NEXT_PUBLIC_ADMIN_IDENTIFIER=Y6WwZ3LYETZjsekjWjoZWnSBu9o5P5MD4Z3HmVGJiYt
-NEXT_PUBLIC_CONTRACT_ID=GxWe9P43UAfWiMHpZzCXJaSwZkcqzvZR6wtgofyBG5cu
 NEXT_PUBLIC_INITIAL_CLIENT=2MfmHqYmAk1jAQNv7SsGJPT22MrfKFcHKZDc7cTu2biX
+
+# contract Id
+
+# PROJECTS
+NEXT_PUBLIC_CONTRACT_ID_PROJECTS=pshenmic-dev-dfo
+NEXT_PUBLIC_CONTRACT_ID=GxWe9P43UAfWiMHpZzCXJaSwZkcqzvZR6wtgofyBG5cu
+# 
