--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 NEXT_PUBLIC_PASSWORD_ADMIN=adminadmin
+# NEXT_PUBLIC_ADMIN_IDENTIFIER=Y6WwZ3LYETZjsekjWjoZWnSBu9o5P5MD4Z3HmVGJiYt
 NEXT_PUBLIC_ADMIN_IDENTIFIER=Y6WwZ3LYETZjsekjWjoZWnSBu9o5P5MD4Z3HmVGJiYt
 NEXT_PUBLIC_INITIAL_CLIENT=2MfmHqYmAk1jAQNv7SsGJPT22MrfKFcHKZDc7cTu2biX
 
