--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
     "react-intersection-observer": "^9.14.1",
+    "react-markdown": "^9.0.3",
     "react-router": "^6.21.1",
     "react-router-dom": "^6.21.1",
     "react-toastify": "^10.0.6",
+    "remark-gfm": "^4.0.0",
     "sass": "^1.69.5",
     "zustand": "^4.5.5"
   },
