--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.4",
     "bip39": "^3.1.0",
-    "dash": "4.8.0",
+    "dash": "github:owl352/js-dash-sdk",
     "framer-motion": "^10.16.16",
     "localforage": "^1.10.0",
     "next": "^14.0.0",
